--- a/app/src/main/res/layout/bottomsheet_fragment_home.xml
+++ b/app/src/main/res/layout/bottomsheet_fragment_home.xml
@@ -1,100 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:id="@+id/container"
+    android:fitsSystemWindows="true"
+    >
 
-    <RelativeLayout
-        android:id="@+id/layout"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:fitsSystemWindows="true">
 
         <RelativeLayout
-            android:id="@+id/layout_cart"
-            android:layout_width="327dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="20dp"
-            android:background="#FFFFFF">
+            android:id="@+id/layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true">
 
-            <View
-                android:id="@+id/vuesax_line_visible"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/remove" />
-
-            <TextView
-                android:id="@+id/gi_h_ng1"
-                android:layout_width="88dp"
+            <RelativeLayout
+                android:id="@+id/layout_cart"
+                android:layout_width="327dp"
                 android:layout_height="32dp"
-                android:layout_marginLeft="90dp"
-                android:layout_marginTop="3dp"
-                android:layout_toRightOf="@+id/vuesax_line_visible"
-                android:gravity="right|top"
-                android:lineSpacingExtra="8sp"
-                android:text="@string/gi_h_ng"
-                android:textAppearance="@style/gi_h_ng"
-                android:textStyle="bold"
-                android:translationY="-4.07sp" />
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="20dp"
+                android:background="#FFFFFF">
 
-            <TextView
-                android:id="@+id/delete_cart"
-                android:layout_width="27dp"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="3dp"
-                android:layout_toRightOf="@+id/gi_h_ng1"
-                android:gravity="right|top"
-                android:lineSpacingExtra="5sp"
-                android:text="@string/xo_"
-                android:textAppearance="@style/xo_"
-                android:translationY="-2.45sp" />
+                <View
+                    android:id="@+id/vuesax_line_visible"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/remove" />
+
+                <TextView
+                    android:id="@+id/gi_h_ng1"
+                    android:layout_width="88dp"
+                    android:layout_height="32dp"
+                    android:layout_marginLeft="90dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_toRightOf="@+id/vuesax_line_visible"
+                    android:gravity="right|top"
+                    android:lineSpacingExtra="8sp"
+                    android:text="@string/gi_h_ng"
+                    android:textAppearance="@style/gi_h_ng"
+                    android:textStyle="bold"
+                    android:translationY="-4.07sp" />
+
+                <TextView
+                    android:id="@+id/delete_cart"
+                    android:layout_width="27dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="3dp"
+                    android:layout_toRightOf="@+id/gi_h_ng1"
+                    android:gravity="right|top"
+                    android:lineSpacingExtra="5sp"
+                    android:text="@string/xo_"
+                    android:textAppearance="@style/xo_"
+                    android:translationY="-2.45sp" />
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_cart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/layout_cart"
+                android:layout_marginTop="12dp"
+                android:orientation="vertical"
+                android:padding="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
         </RelativeLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_cart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_cart"
-            android:layout_marginTop="10dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"
-            android:padding="10dp" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        <LinearLayout
-            android:layout_below="@+id/rcv_cart"
-            android:id="@+id/arrow_3_but"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="12dp"
-            android:background="@color/white">
-
-            <TextView
-                android:id="@+id/quantity_product"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="12dp"
-                android:text="3"
-                android:gravity="center"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/cart_figma"
-                android:textColor="@color/red_light" />
-            <Button
-                android:id="@+id/button_thanh"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:backgroundTint="@color/red"
-                android:text="@string/thanh_to_n_"
-                android:textColor="@color/white"
-                />
-        </LinearLayout>
-
-    </RelativeLayout>
-
-
-</RelativeLayout>
+</FrameLayout>
