--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -24,11 +24,35 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/image_food_detail"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="234dp"
-                        android:scaleType="centerCrop"/>
+                        android:layout_height="254dp">
+
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/viewpager_img"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cv_position_img"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            app:cardCornerRadius="10dp"
+                            android:layout_margin="10dp"
+                            android:backgroundTint="@color/grey_transparent2"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentBottom="true">
+
+                            <TextView
+                                android:id="@+id/tv_position_img"
+                                android:layout_width="50dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:padding="5dp"
+                                android:backgroundTint="@color/grey_transparent2"/>
+
+                        </androidx.cardview.widget.CardView>
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
