--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -1,24 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.main.product.ProductListFragment">
 
- <include
-     android:id="@+id/appBar"
-     layout="@layout/toolbar_header"/>
+    <include
+        android:id="@+id/appBar"
+        layout="@layout/toolbar_header" />
+
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        >
+        <LinearLayout
+            android:paddingHorizontal="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/btn_new"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_border_gray_outline"
+                android:paddingHorizontal="20dp"
+                android:layout_marginRight="12dp"
+                android:paddingVertical="8dp"
+                android:text="Mới nhất" />
+
+            <TextView
+                android:id="@+id/btn_best_seller"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_border_gray_outline"
+                android:paddingHorizontal="20dp"
+                android:layout_marginRight="12dp"
+                android:paddingVertical="8dp"
+                android:text="Bán chạy" />
+
+            <TextView
+                android:id="@+id/btn_top_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_border_gray_outline"
+                android:paddingHorizontal="20dp"
+                android:layout_marginRight="12dp"
+                android:paddingVertical="8dp"
+                android:text="Đánh giá" />
+
+            <TextView
+                android:id="@+id/btn_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_border_gray_outline"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="8dp"
+                android:text="Giá" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="20dp"
+        android:id="@+id/rcv_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
-        tools:listitem="@layout/item_new_layout_ver"
-        android:id="@+id/rcv_product"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_new_layout_ver" />
 
 </LinearLayout>
