--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,9 @@
     tools:context=".ui.main.MainActivity"
     android:fitsSystemWindows="true"
     >
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.fragment.app.FragmentContainerView
+        <FrameLayout
             android:id="@+id/frame_layout"
-            android:name="com.fpoly.smartlunch.ui.main.home.HomeFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/bottom_nav"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
             />
-
-        <com.ismaeldivita.chipnavigation.ChipNavigationBar
-            android:id="@+id/bottom_nav"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:layout_alignParentBottom="true"
-            android:fadingEdge="horizontal"
-            app:cnb_menuResource="@menu/menu_main"
-            android:background="@color/white"
-            app:cnb_unselectedColor="@color/dark_grey"
-            app:cnb_iconSize="28dp"
-            android:paddingTop="12dp"
-            />
-
-    </RelativeLayout>
-
 </RelativeLayout>
