--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,7 @@
             </RelativeLayout>
 
             <androidx.core.widget.NestedScrollView
+                android:id="@+id/layout_scroll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/layout_header">
@@ -226,7 +227,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/xem_th_m1"
+                            android:id="@+id/tv_see_more_rate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
