--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,97 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.search.SearchFragment">
 
-    <RelativeLayout
-        android:id="@+id/layout_header"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/layout_loading"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/back"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilTitle"
-            android:layout_toEndOf="@+id/img_back"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_centerVertical="true"
-            app:hintEnabled="false"
-            style="@style/PolyInputLayoutLogin"
-            app:startIconDrawable="@drawable/icon_search">
+            android:layout_height="match_parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtTitle"
+            <RelativeLayout
+                android:id="@+id/layout_header"
                 android:layout_width="match_parent"
+                android:layout_height="60dp">
+
+                <ImageView
+                    android:id="@+id/img_back"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:padding="10dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:src="@drawable/back"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilTitle"
+                    android:layout_toEndOf="@+id/img_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_centerVertical="true"
+                    app:hintEnabled="false"
+                    style="@style/PolyInputLayoutLogin"
+                    app:startIconDrawable="@drawable/icon_search">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:transformPivotY="10dp"
+                        android:hint="Search"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <ImageView
+                    android:id="@+id/img_clear"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:padding="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/icon_clear"
+                    android:visibility="gone"
+                    />
+
+            </RelativeLayout>
+
+            <HorizontalScrollView
+                android:id="@+id/layout_filter"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:transformPivotY="10dp"
-                android:hint="Search"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+                android:scrollbars="none"
+                android:layout_below="@+id/layout_header"
+                >
+                <LinearLayout
+                    android:paddingHorizontal="24dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/btn_sort"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_border_gray_outline"
+                        android:paddingHorizontal="20dp"
+                        android:layout_marginRight="12dp"
+                        android:paddingVertical="8dp"
+                        android:drawableStart="@drawable/icon_sort"
+                        android:text="Sắp xếp"
+                        android:drawableTint="@color/black"/>
+
+                    <TextView
+                        android:id="@+id/btn_best_seller"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_border_gray_outline"
+                        android:paddingHorizontal="20dp"
+                        android:layout_marginRight="12dp"
+                        android:paddingVertical="8dp"
+                        android:text="Bán chạy" />
+
+                    <TextView
+                        android:id="@+id/btn_top_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_border_gray_outline"
+                        android:paddingHorizontal="20dp"
+                        android:layout_marginRight="12dp"
+                        android:paddingVertical="8dp"
+                        android:text="Đánh giá" />
+
+                    <TextView
+                        android:id="@+id/btn_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_border_gray_outline"
+                        android:paddingHorizontal="20dp"
+                        android:paddingVertical="8dp"
+                        android:text="Giá" />
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/tv_finding"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"
+                android:layout_below="@+id/layout_filter"
                 />
-        </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:paddingHorizontal="10dp"
+                android:layout_below="@+id/tv_finding" />
+
+            <!--    <TextView-->
+            <!--        android:id="@+id/tv_exists"-->
+            <!--        android:layout_width="wrap_content"-->
+            <!--        android:layout_height="wrap_content"-->
+            <!--        android:text="Không có dữ liệu"-->
+            <!--        android:layout_centerHorizontal="true"-->
+            <!--        android:layout_marginTop="100dp"-->
+            <!--        android:visibility="gone"-->
+            <!--        />-->
+
+            <ProgressBar
+                android:id="@+id/img_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"
+                android:visibility="gone"
+                />
 
 
-        <ImageView
-            android:id="@+id/img_clear"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="15dp"
-            android:layout_marginEnd="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/icon_clear"
-            android:visibility="gone"
-            />
+        </RelativeLayout>
 
-    </RelativeLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:paddingHorizontal="10dp"
-        android:layout_below="@+id/tv_finding" />
-
-    <TextView
-        android:id="@+id/tv_finding"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textSize="16sp"
-        android:layout_below="@+id/layout_header"
-        />
-
-    <TextView
-        android:id="@+id/tv_exists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Không có dữ liệu"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:visibility="gone"
-        />
-
-    <ProgressBar
-        android:id="@+id/img_loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:visibility="gone"
-        />
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
