--- a/app/src/main/res/layout/bottomsheet_fragment_home.xml
+++ b/app/src/main/res/layout/bottomsheet_fragment_home.xml
@@ -21,9 +21,9 @@
 
             <RelativeLayout
                 android:id="@+id/layout_cart"
-                android:layout_width="327dp"
+                android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginLeft="24dp"
+                android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="20dp"
                 android:background="#FFFFFF">
 
@@ -39,28 +39,20 @@
                     android:id="@+id/gi_h_ng1"
                     android:layout_width="88dp"
                     android:layout_height="32dp"
-                    android:layout_marginLeft="90dp"
-                    android:layout_marginTop="3dp"
-                    android:layout_toRightOf="@+id/vuesax_line_visible"
-                    android:gravity="right|top"
-                    android:lineSpacingExtra="8sp"
+                    android:layout_centerInParent="true"
                     android:text="@string/gi_h_ng"
                     android:textAppearance="@style/gi_h_ng"
-                    android:textStyle="bold"
-                    android:translationY="-4.07sp" />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/delete_cart"
-                    android:layout_width="27dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="3dp"
-                    android:layout_toRightOf="@+id/gi_h_ng1"
                     android:gravity="right|top"
-                    android:lineSpacingExtra="5sp"
                     android:text="@string/xo_"
-                    android:textAppearance="@style/xo_"
-                    android:translationY="-2.45sp" />
+                    android:textAppearance="@style/xo_" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
