--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -60,6 +60,8 @@
                 android:id="@+id/first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
+                android:imeOptions="actionNext"
                 android:hint="@string/first_name" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -77,6 +79,8 @@
                 android:id="@+id/last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
+                android:imeOptions="actionNext"
                 android:hint="@string/last_name" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -93,6 +97,8 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
+            android:imeOptions="actionNext"
             android:hint="@string/email" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -108,6 +114,8 @@
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:imeOptions="actionNext"
             android:hint="@string/phone_number" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -118,13 +126,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/password_til"
         android:layout_marginTop="16dp"
+        app:errorEnabled="true"
         app:endIconMode="password_toggle"
-        app:errorEnabled="true">
+        app:endIconDrawable="@drawable/custom_password_eyes">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:imeOptions="actionNext"
             android:hint="@string/password" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -133,13 +144,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/confirm_password_til"
+        app:errorEnabled="true"
         app:endIconMode="password_toggle"
-        app:errorEnabled="true">
+        app:endIconDrawable="@drawable/custom_password_eyes">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:imeOptions="actionDone"
             android:hint="@string/confirm_password" />
 
     </com.google.android.material.textfield.TextInputLayout>
